--- a/index.html
+++ b/index.html
@@ -96,9 +96,16 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12 px-5 pt-2">
+          <div class="embed-responsive embed-responsive-16by9">
+            <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item p-3" controls="controls" width="10"> Your browser does not support HTML5 video. </video>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="">
+  <div class="pt-3 pb-3">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.9), rgba(245, 245, 245, 0.9));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row" style="">
         <div class="col-lg-8 p-md-5 d-flex flex-column justify-content-center">
