--- a/connororton.html
+++ b/connororton.html
@@ -42,30 +42,6 @@
       </div>
     </div>
   </div>
-  <div class="mt-3" style="">
-    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
-      <div class="row">
-        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-8" style="">
-          <h1 class="pt-3"><b>Pixel Pinball Arcade (2020)</b></h1>
-          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:<br></b>- Designing the game concept, gameplay systems and menus<br>- Asset workflow management<br>- Source control management<br>- Engine asset &amp; scene implementation<br>- Writing game system, menu and gameplay scripts<br>- Audio development<br>- Exporting and uploading to the play store</p>
-        </div>
-        <div class="col-lg-4 p-3">
-          <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
-            <div class="carousel-inner">
-              <div class="carousel-item active"> <img class="d-block w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot1.jpg"> </div>
-              <div class="carousel-item"> <img class="d-block w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot2.jpg"> </div>
-              <div class="carousel-item"> <img class="d-block w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot3.jpg"> </div>
-              <div class="carousel-item"> <img class="d-block w-100" src="assets/Portfolio/Shared/PPA/PPA_Screenshot4.jpg"> </div>
-            </div>
-            <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span></a>
-            <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
@@ -76,7 +52,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 px-5 pb-3">
-          <div class="embed-responsive embed-responsive-16by9 pt-4">
+          <div class="embed-responsive embed-responsive-16by9 pt-4" style="">
             <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
           </div>
