--- a/connororton.html
+++ b/connororton.html
@@ -31,10 +31,10 @@
       <div class="row">
         <div class="col-md-6" style=""> <img class="d-block img-fluid px-1 pt-3" src="assets/Portrait/Connor_Orton.jpg">
           <div class="row">
-            <div class="col-md-12"><a class="btn text-white my-2 mx-auto btn-block btn-lg" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a><a class="btn text-white my-2 mx-auto btn-lg btn-block" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a><a class="btn text-white my-2 mx-auto btn-lg btn-block" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
+            <div class="col-md-12 pb-2"><a class="btn text-white my-2 mx-auto btn-block btn-lg" href="https://www.facebook.com/connor.orton/" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a><a class="btn text-white my-2 mx-auto btn-lg btn-block" href="https://www.linkedin.com/in/connororton/" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a><a class="btn text-white btn-lg btn-block my-2 mx-auto" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
         </div>
-        <div class="px-md-5 col-md-6 justify-content-center flex-column d-flex" style="">
+        <div class="px-md-5 col-md-6 flex-column d-flex justify-content-center" style="">
           <h1 class="mt-3" contenteditable="true">Connor Orton BSC</h1>
           <h3>Game Designer &amp; Programmer</h3>
           <p class="mb-3 lead">I am a passionate video game developer who specializes in design and programming. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have a wide variety of experience with most game engines and industry standard production techniques including programming, 2D &amp; 3D art and animation, audio design and more. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p><a class="btn btn-primary" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a><a class="btn btn-primary my-3" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a>
@@ -45,9 +45,9 @@
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 justify-content-center d-flex flex-column col-lg-12">
+        <div class="p-md-5 flex-column align-items-center justify-content-center d-flex col-lg-12 h-50">
           <h1 class="pt-3">Pixel Pinball Arcade (2020)</h1>
-          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. Inspired by the popular arcade machine pinball. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:&nbsp;<br></b>- Designing the game concept, gameplay systems and menus&nbsp;<br>- Asset workflow management - Source control management&nbsp;<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
+          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. Inspired by the popular arcade machine pinball. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:&nbsp;<br></b>- Designing the game concept, gameplay systems and menus&nbsp;<br>- Asset workflow management - Source control management&nbsp;<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3 w-25" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
         </div>
       </div>
       <div class="row">
@@ -63,7 +63,7 @@
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12">
+        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 h-50 align-items-center">
           <h1 class="pt-3"><b>Battle Beasts - RPG Mechanics Asset Pack (2017)</b></h1>
           <p class="mb-0">Battle Beasts RPG Mechanics asset pack is a collection of RPG mechanics that I created using Unreal Engine 4 with blueprint visual scripting. It was created as part as my programming module on my BSC Games Production undergraduate degree. The game mechanics included are inspired by the Pokemon game franchise. The main mechanics and systems the asset pack includes are:<br><br>- <b>Combat system</b> (Control your beasts against your opponent, use abilities and items to defeat them, features battles against npcs and random encounters.)<br>- <b>Dialogue system</b> (Features multi choice questions and multiple outcomes depending on dialogue choice.)<br>- <b>In-Game database system</b> (For showing the player what beasts exist in the game and if they have captured them)<br>- <b>Engine System databases</b> (To manage units, unit abilities, items etc.)<br>- <b>Shop system</b> (Combined with the dialogue system to allow the player to purchase items using currency from a merchant.)<br>- <b>Bank system</b> (Combined with the dialogue system to store player beasts in a unit storage)<br>- <b>Trade system</b> (Combined with the dialogue system to trade player beasts with NPCs.)<br>-&nbsp;<b>Utility menu</b> (To allow the player to access in-game database, beast team, inventory and options for game preferences.)<br>- <b>Player unit progression</b> (Beasts level up and learn new abilities depending on their level.)</p>
         </div>
@@ -81,7 +81,7 @@
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12">
+        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center h-25">
           <h1 class="pt-3"><b>Survival Training VR Simulation (2017)</b></h1>
           <p class="mb-0" style="">Survival Training VR is a virtual reality simulator that I created in Unreal Engine 4 with Unreal Blueprint. This project was submitted alongside my dissertation for my BSC games production course. It featured a first person scenario where the player must learn survival skills in a virtual reality environment and answer questions in a quiz. At the end of the simulation the player was informed how they did on the quiz to let them know if they learned from the simulation.<br></p>
         </div>
@@ -99,7 +99,7 @@
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12">
+        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 h-25 align-items-center">
           <h1 class="pt-3"><b>Isolation Complex - Short Puzzle Game (2017)</b></h1>
           <p class="mb-0" contenteditable="true">Isolation complex is a short first person puzzle game that I created in Unreal Engine 4 using Unreal Blueprint. It was created to be submitted alongside my dissertation before I changed my idea to survival training in VR. It features puzzle solving and an inventory system which you can use to combine items.<br></p>
         </div>
@@ -117,8 +117,8 @@
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12" style="">
-          <h1 class="py-3"><b>Once Upon a Castle - Tower Defense Game Demo (2016)</b></h1>
+        <div class="p-md-5 d-flex justify-content-center col-lg-12 h-25 flex-column align-items-center" style="">
+          <h1 class="py-3"><b>Tower Defense Game Demo (2016)</b></h1>
           <p class="mb-0" style="">Once Upon a Castle was a tower defense game that I created in Unreal Engine 4 using Unreal Blueprint. It features real time player combat with enemy waves which damage player defenses, resource gathering, tower building which featured the base and the weapon selections and more. Was showcased to students and some industry proffesionals on a showcase day at the end of my first year on my BSC course.<br></p>
         </div>
       </div>
@@ -135,7 +135,7 @@
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12" style="">
+        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center h-25" style="">
           <h1 class="py-3"><b>Dash and Stack (2015)</b></h1>
           <p class="mb-0" style="">Dash and Stack is an android game created in Unity and written in C#. I developed this project with a friend and it was placed on the google play store for free. I was responsible for designing the game concept and the menu systems. Whilst my partner developed the gameplay mechanics I created the menu system, art and audio assets.<br></p>
         </div>
@@ -153,7 +153,7 @@
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12" style="">
+        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center h-25" style="">
           <h1 class="pt-3"><b>Operation Health (2D Platformer Demo) (2012)</b></h1>
           <p class="mb-0" style="">Operation health was a 2d platformer demo that I created using Game Maker using GML. It was used as my final major project during my level 2 creative technologies course. I was asked by my tutor if it could be used as an example for the next year students for what to expect going forward with their own projects.<br></p>
         </div>
