--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 px-5 pt-2">
+        <div class="col-md-12 px-5">
           <div class="embed-responsive embed-responsive-16by9">
             <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item p-3" controls="controls" width="10"> Your browser does not support HTML5 video. </video>
           </div>
