--- a/connororton.html
+++ b/connororton.html
@@ -45,7 +45,7 @@
   <div class="mt-3 pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
-        <div class="p-md-5 align-items-center justify-content-center d-flex col-lg-12 flex-column text-left">
+        <div class="p-md-5 align-items-center d-flex col-lg-12 flex-column text-left justify-content-center">
           <h1 class="pt-3 text-center">Pixel Pinball Arcade (2020)</h1>
           <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. Inspired by the popular arcade machine pinball. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:&nbsp;<br></b>- Designing the game concept, gameplay systems and menus&nbsp;<br>- Asset workflow management - Source control management&nbsp;<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3 w-25" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
         </div>
@@ -173,7 +173,7 @@
       <div class="row">
         <div class="mx-auto p-4 col-lg-7">
           <h1 class="mb-4">Contact Form</h1>
-          <form action="https://formspree.io/f/mjvjadeg">
+          <form action="https://formspree.io/https://formspree.io/f/mjvjadeg">
             <div class="form-row">
               <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" placeholder="Name" required="required" name="Name"> </div>
               <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" required="required" name="Email"> </div>
