--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
           </h4>
           <p class="mb-0 bg-primary px-2 py-2" style="">Connor is a games designer and programmer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
-        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="200" src="assets/Portrait/Natalie_Smith.jpeg">
+        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mx-auto mb-5" width="250
+
+300
+400" src="assets/Portrait/Natalie_Smith.jpeg" height="150
+300">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
