--- a/index.html
+++ b/index.html
@@ -48,14 +48,16 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto h-50 w-75" width="200" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
+        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="300
+400
+350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
           <h4 class="bg-secondary"> <b>Connor Orton BSC</b>
             <p class="lead py-1">Game Designer &amp; Programmer</p>
           </h4>
           <p class="mb-0 bg-primary px-2 py-2" style="">Connor is a games designer and programmer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
         <div class="col-12 col-lg-6 py-2" style="">
-          <img class="img-fluid d-block mb-3 mx-auto h-50 w-75" width="200" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg">
+          <img class="img-fluid d-block mb-3 mx-auto" width="300" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
