--- a/connororton.html
+++ b/connororton.html
@@ -35,9 +35,9 @@
           </div>
         </div>
         <div class="px-md-5 col-md-6 flex-column d-flex justify-content-center" style="">
-          <h1 class="mt-3 text-center" contenteditable="true">Connor Orton BSC</h1>
+          <h1 class="mt-3 text-center">Connor Orton BSc</h1>
           <h3 class="text-center">Game Designer &amp; Programmer</h3>
-          <p class="mb-3 lead text-center">I am a passionate video game developer who specializes in design and programming. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have a wide variety of experience with most game engines and industry standard production techniques including programming, 2D &amp; 3D art and animation, audio design and more. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p><a class="btn btn-primary" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a><a class="btn btn-primary my-3" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a>
+          <p class="mb-3 lead text-center">I am a passionate, dedicated and considerate aspiring video game developer who specializes in programming and design. I have had an interest in games production since an early age and my ambition is to develop enjoyable and innovative games for a wide variety of audiences to play. I have experience with most game engines and industry standard production techniques including programming, 2D &amp; 3D art and animation, audio design and more. Find my CV and portfolio on this page and contact me using the contact form if you are interested in hiring me.</p><a class="btn btn-primary mb-4" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a><a class="btn btn-primary my-3" href="https://www.linkedin.com/in/connororton/">Github Portfolio (C# Projects)</a><a class="btn btn-primary my-3" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a>
         </div>
       </div>
     </div>
@@ -46,8 +46,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 align-items-center d-flex col-lg-12 flex-column text-left justify-content-center">
-          <h1 class="pt-3 text-center">Pixel Pinball Arcade (2020)</h1>
-          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity and released for free on the google play store. Inspired by the popular arcade machine pinball. I developed this game in a team of two which included myself and a 2D artist. It was written in the C# programming language. This was my second project working in a team of two.<br><br><b>My responsibilities were:&nbsp;<br></b>- Designing the game concept, gameplay systems and menus&nbsp;<br>- Asset workflow management - Source control management&nbsp;<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3 w-25" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
+          <h1 class="pt-3 text-center">Pixel Pinball Arcade - 2020 (Unity, C#)</h1>
+          <p class="mb-0">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. I developed this game in a team of two which included myself and a 2D artist. This was my second project working in a team of two.<br><br><b>My responsibilities were:&nbsp;<br></b>- Designing the game concept, gameplay systems and menus&nbsp;<br>- Asset workflow management - Source control management&nbsp;<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success my-3 w-25" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB">Pixel Pinball Arcade</a>
         </div>
       </div>
       <div class="row">
@@ -64,8 +64,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center">
-          <h1 class="pt-3 text-center"><b>Battle Beasts - RPG Mechanics Asset Pack (2017)</b></h1>
-          <p class="mb-0">Battle Beasts RPG Mechanics asset pack is a collection of RPG mechanics that I created using Unreal Engine 4 with blueprint visual scripting. It was created as part as my programming module on my BSC Games Production undergraduate degree. The game mechanics included are inspired by the Pokemon game franchise. The main mechanics and systems the asset pack includes are:<br><br>- <b>Combat system</b> (Control your beasts against your opponent, use abilities and items to defeat them, features battles against npcs and random encounters.)<br>- <b>Dialogue system</b> (Features multi choice questions and multiple outcomes depending on dialogue choice.)<br>- <b>In-Game database system</b> (For showing the player what beasts exist in the game and if they have captured them)<br>- <b>Engine System databases</b> (To manage units, unit abilities, items etc.)<br>- <b>Shop system</b> (Combined with the dialogue system to allow the player to purchase items using currency from a merchant.)<br>- <b>Bank system</b> (Combined with the dialogue system to store player beasts in a unit storage)<br>- <b>Trade system</b> (Combined with the dialogue system to trade player beasts with NPCs.)<br>-&nbsp;<b>Utility menu</b> (To allow the player to access in-game database, beast team, inventory and options for game preferences.)<br>- <b>Player unit progression</b> (Beasts level up and learn new abilities depending on their level.)</p>
+          <h1 class="pt-3 text-center"><b>Battle Beasts - RPG Mechanics Asset Pack - 2017 (Unreal Engine 4, Blueprint)</b></h1>
+          <p class="mb-0">Battle Beasts RPG Mechanics asset pack is a collection of RPG mechanics that was developed using Unreal Engine 4 with blueprint visual scripting. It was created as part as my programming module on my BSC Games Production undergraduate degree. The game mechanics included are inspired by the Pokemon game franchise. The main mechanics and systems the asset pack includes are:<br><br>- <b>Combat system</b> (Control your beasts against your opponent, use abilities and items to defeat them, features battles against npcs and random encounters.)<br>- <b>Dialogue system</b> (Features multi choice questions and multiple outcomes depending on dialogue choice.)<br>- <b>In-Game database system</b> (For showing the player what beasts exist in the game and if they have captured them)<br>- <b>Engine System databases</b> (To manage units, unit abilities, items etc.)<br>- <b>Shop system</b> (Combined with the dialogue system to allow the player to purchase items using currency from a merchant.)<br>- <b>Bank system</b> (Combined with the dialogue system to store player beasts in a unit storage)<br>- <b>Trade system</b> (Combined with the dialogue system to trade player beasts with NPCs.)<br>-&nbsp;<b>Utility menu</b> (To allow the player to access in-game database, beast team, inventory and options for game preferences.)<br>- <b>Player unit progression</b> (Beasts level up and learn new abilities depending on their level.)</p>
         </div>
       </div>
       <div class="row">
@@ -82,8 +82,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center">
-          <h1 class="pt-3 text-center"><b>Survival Training VR Simulation (2017)</b></h1>
-          <p class="mb-0" style="">Survival Training VR is a virtual reality simulator that I created in Unreal Engine 4 with Unreal Blueprint. This project was submitted alongside my dissertation for my BSC games production course. It featured a first person scenario where the player must learn survival skills in a virtual reality environment and answer questions in a quiz. At the end of the simulation the player was informed how they did on the quiz to let them know if they learned from the simulation.<br></p>
+          <h1 class="pt-3 text-center"><b>Survival Training VR Simulation - 2017 (Unreal Engine 4, Blueprint)</b></h1>
+          <p class="mb-0" style="">Survival Training VR is a virtual reality simulator demo was developed in Unreal Engine 4 with Unreal Blueprint as part as my BSC games production dissertation project where the intention was collating data on if the user can learn survival skills in virtual reality. After completing all tasks the player was informed how they did on the quiz to let them know if they learned from the simulation.<br></p>
         </div>
       </div>
       <div class="row">
@@ -100,8 +100,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center">
-          <h1 class="pt-3 text-center"><b>Isolation Complex - Short Puzzle Game (2017)</b></h1>
-          <p class="mb-0" contenteditable="true">Isolation complex is a short first person puzzle game that I created in Unreal Engine 4 using Unreal Blueprint. It was created to be submitted alongside my dissertation before I changed my idea to survival training in VR. It features puzzle solving and an inventory system which you can use to combine items.<br></p>
+          <h1 class="pt-3 text-center"><b>Isolation Complex - 2017 (Unreal Engine 4, Blueprint)</b></h1>
+          <p class="mb-0">Isolation complex is a short first person puzzle game demo developed in Unreal Engine 4 using Unreal Blueprint, it was created as part of my BSC Games Production as my dissertation project to collate data to see if players could play a game and solve puzzles under specific conditions I.E under a certain time, before I changed the idea topic. It features adventure and puzzle game elements where the player must solve a variety of logic puzzles to escape the room.<br></p>
         </div>
       </div>
       <div class="row">
@@ -118,8 +118,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex justify-content-center col-lg-12 flex-column align-items-center" style="">
-          <h1 class="py-3 text-center"><b>Tower Defense Game Demo (2016)</b></h1>
-          <p class="mb-0" style="">Once Upon a Castle was a tower defense game that I created in Unreal Engine 4 using Unreal Blueprint. It features real time player combat with enemy waves which damage player defenses, resource gathering, tower building which featured the base and the weapon selections and more. Was showcased to students and some industry proffesionals on a showcase day at the end of my first year on my BSC course.<br></p>
+          <h1 class="py-3 text-center"><b>Once Upon a Castle - 2015 (Unreal Engine 4, Blueprint)</b></h1>
+          <p class="mb-0" style="">Once Upon a Castle is a tower defense game demo that was developed in Unreal Engine 4 using Unreal Blueprint visual scripting as part as my Foundation Degree. It features real time player combat with enemy waves which damage player defenses, resource gathering, tower building which featured the base and the weapon selections and more.<br></p>
         </div>
       </div>
       <div class="row">
@@ -136,8 +136,8 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center" style="">
-          <h1 class="py-3 text-center"><b>Dash and Stack (2015)</b></h1>
-          <p class="mb-0" style="">Dash and Stack is an android game created in Unity and written in C#. I developed this project with a friend and it was placed on the google play store for free. I was responsible for designing the game concept and the menu systems. Whilst my partner developed the gameplay mechanics I created the menu system, art and audio assets.<br></p>
+          <h1 class="py-3 text-center"><b>Dash and Stack - 2015 (Unity, C#)</b></h1>
+          <p class="mb-0" style="">Dash and Stack is a complete android game developed in Unity and written in C# designed for older android phones. I developed this project with a friend and it was placed on the google play store for free. I was responsible for designing the game and game modes. I implemented the user interface, audio and writ the menu systems whilst my partner writ the gameplay scripts.<br></p>
         </div>
       </div>
       <div class="row">
@@ -154,8 +154,26 @@
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center" style="">
-          <h1 class="pt-3 text-center"><b>Operation Health (2D Platformer Demo) (2012)</b></h1>
-          <p class="mb-0" style="">Operation health was a 2d platformer demo that I created using Game Maker using GML. It was used as my final major project during my level 2 creative technologies course. I was asked by my tutor if it could be used as an example for the next year students for what to expect going forward with their own projects.<br></p>
+          <h1 class="py-3 text-center"><b>I Am Alone - 2015 (Ren'Py, Python)</b></h1>
+          <p class="mb-0" style="">I Am Alone is a visual novel demo was developed in the Ren'Py engine as part as my level 3 extended diploma. Written in the python programming language. It has puzzle elements with a horror narrative feel where the player has to explore a mysterious underground facility solving various puzzles to find answers of who called them there.<br></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 pb-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-4">
+            <video src="assets/Portfolio/Connor/I Am Alone.mp4" class="embed-responsive-item" controls="controls" width="1
+10"> Your browser does not support HTML5 video. </video>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mt-3 pb-3" style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
+      <div class="row">
+        <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center" style="">
+          <h1 class="pt-3 text-center"><b>Operation Health - 2012 (Game Maker, GML)</b></h1>
+          <p class="mb-0" style="">Operation Health is a 2D platformer demo that was developed using Game Maker written in GML as part of my level 2 creative media course as we were tasked to great a game with the topic of healthy living. It was used as my final major project during my level 2 creative technologies course. It features action platformer elements with a comedic narrative. The player must progress through the level whilst shooting and defeating enemies until they reach the end of the game.<br></p>
         </div>
       </div>
       <div class="row">
