--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto" width="300
+        <div class="col-12 col-lg-6 py-2" style=""> <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="300
 400
 350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
           <h4 class="bg-secondary"> <b>Connor Orton BSC</b>
@@ -57,7 +57,7 @@
           <p class="mb-0 bg-primary px-2 py-2" style="">Connor is a games designer and programmer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
         <div class="col-12 col-lg-6 py-2" style="">
-          <img class="img-fluid d-block mb-3 mx-auto" width="300" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg">
+          <img class="img-fluid d-block mb-3 mx-auto border border-dark" width="300" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
@@ -128,6 +128,7 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
 </body>
 
 </html>
