--- a/connororton.html
+++ b/connororton.html
@@ -44,9 +44,9 @@
             <div class="col-md-4"><a class="btn text-white my-2 mx-auto d-flex justify-content-center btn-lg" href="https://twitter.com/ConnorOrton" style="background: rgb(85, 172, 238);" target="_blank"><i class="fa fa-twitter fa-fw fa-1x py-1"></i></a></div>
           </div>
           <div class="row px-2">
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://github.com/connor1994">Github Portfolio</a></div>
-            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://github.com/connor1994">GitHub Portfolio</a></div>
             <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="assets/CV/Connor Orton CV.pdf"><i class="fa fa-download fa-fw"></i>Download CV</a></div>
+            <div class="col-md-4 pb-3"><a class="btn btn-primary btn-block btn-lg" href="https://sketchfab.com/conn0">Sketchfab 3D Portfolio</a></div>
           </div>
         </div>
       </div>
