--- a/connororton.html
+++ b/connororton.html
@@ -57,7 +57,15 @@
       <div class="row">
         <div class="p-md-5 d-flex flex-column justify-content-center align-items-center col-lg-12">
           <h1 class="pt-3 text-center">Blight of the Rose (In Development) - 2021+ (Unity, C#)</h1>
-          <p class="mx-auto">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><b>My main responsibilites are:</b><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>User interface preview video incoming soon.</p>
+          <p class="mx-auto">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors.<br><br><b>My main responsibilites are:</b><br>- Designing the various game concepts including the story and setting, gameplay systems and user interface<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation<br>- Writing game system, user interface and gameplay scripts<br>- Lighting and rendering management using Unity's URP<br>- Building and exporting the game<br><br>First development preview below. Disclaimer: Most assets are placeholder and are expected to be changed before project finish.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 pb-3">
+          <div class="embed-responsive embed-responsive-16by9 pt-3">
+            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="1
+10"> Your browser does not support HTML5 video. </video>
+          </div>
         </div>
       </div>
     </div>
