--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -61,6 +61,63 @@
       </div>
     </div>
   </div>
+  <div class="pt-3">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center my-3" style="">Pixel Pinball Arcade</h1>
+          <p class="px-4">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="" style="	background-image: linear-gradient(to bottom, Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two.  My main responsibilities were:  - Designing the various game concepts which examples include gameplay systems and user interface  - Asset pipeline management with source control - Engine asset &amp; scene implementation  - Writing game system, menu and gameplay scripts  - Audio development  - Exporting and uploading to the play store, rgba(0,0,0,0.8));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12 py-3"><a class="btn btn-primary btn-block btn-lg" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a></div>
+      </div>
+      <div class="row">
+        <div class="text-center mx-auto col-md-8">
+          <h1 class="mb-3">2D Sprites</h1>
+          <p class="lead">All sprites were designed and developed from scratch by myself taking inspiration from real pinball boards. They were all developed and exported using Aseprite.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Adaptive_Foreground_sprite.png" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Ball_sprite.png" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Bumper_Unlit_sprite.png" width="200"></div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto my-5" src="assets/Portfolio/Natalie/PPA Sprites/Flipper_Unlit_sprite.png" width="200" height="120
+200"></div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Plunger_sprite.png" width="100
+125
+
+100
+50
+100
+50" height="100
+1100
+10"></div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Slingshot_Unlit_sprite.png" width="150" height="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Speed_Boost_Unlit_sprite.png" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Inner_sprite.png" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Rounded_sprite.png" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Square_sprite.png"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/UI_Pause_Button_Unlit_sprite.png" height="200" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_sprite.png" height="200" width="200"> </div>
+      </div>
+    </div>
+  </div>
+  <div class="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="embed-responsive embed-responsive-16by9">
+            <video src="assets/Portfolio/Shared/PPA/Pixel Pinball Arcade.mp4" class="embed-responsive-item" controls="controls"> Your browser does not support HTML5 video. </video>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" style=""></script>
