--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -66,7 +66,7 @@
       <div class="row">
         <div class="col-md-12">
           <h1 class="text-center my-3" style="">Pixel Pinball Arcade</h1>
-          <p class="px-4">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
+          <p class="px-4 mx-5">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
         </div>
       </div>
     </div>
@@ -100,10 +100,14 @@
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="d-block img-fluid mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Slingshot_Unlit_sprite.png" width="150" height="200"> </div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Speed_Boost_Unlit_sprite.png" width="200"> </div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Inner_sprite.png" width="200"> </div>
-        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Rounded_sprite.png" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Whirlwind_Spinner_Outer_sprite.png" height="200" width="200"> </div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Square_sprite.png"> </div>
-        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/UI_Pause_Button_Unlit_sprite.png" height="200" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/PPA_Icon_Small_Rounded_sprite.png" width="200"></div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/UI_Pause_Button_Unlit_sprite.png" height="200" width="200"></div>
         <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_sprite.png" height="200" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Green_sprite.png" height="200" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Red_sprite.png" height="200" width="200"> </div>
+        <div class="col-lg-3 col-md-6 p-3" style=""> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/PPA Sprites/Wormhole_Blue_sprite.png" height="200" width="200"></div>
       </div>
     </div>
   </div>
