--- a/connororton.html
+++ b/connororton.html
@@ -71,6 +71,11 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
+          <div class="row">
+            <div class="col-md-12">
+              <h1 class="text-center">Development Update Video</h1>
+            </div>
+          </div>
           <div class="embed-responsive embed-responsive-16by9 pt-3">
             <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -85,6 +90,11 @@
         <div class="p-md-5 d-flex flex-column justify-content-center align-items-center col-lg-12">
           <h1 class="pt-3 text-center">Pixel Pinball Arcade - 2020 (Unity, C#)</h1>
           <p class="mx-auto">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two.<br><br><b>My main responsibilities were:&nbsp;<br></b>- Designing the various game concepts which examples include gameplay systems and user interface&nbsp;<br>- Asset pipeline management with source control<br>- Engine asset &amp; scene implementation&nbsp;<br>- Writing game system, menu and gameplay scripts&nbsp;<br>- Audio development&nbsp;<br>- Exporting and uploading to the play store</p><a class="btn btn-success btn-block btn-lg" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center">Gameplay Video</h1>
         </div>
       </div>
       <div class="row">
@@ -106,6 +116,11 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center">Preview Video</h1>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-12 pb-3">
           <div class="embed-responsive embed-responsive-16by9 pt-3">
             <video src="assets/Portfolio/Connor/Battle Beasts - RPG Mechanics Asset Pack - Trailer.mp4" class="embed-responsive-item" controls="controls" width="1
@@ -124,6 +139,11 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center">Preview Video</h1>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-12 pb-3">
           <div class="embed-responsive embed-responsive-16by9 pt-3">
             <video src="assets/Portfolio/Connor/Survival Training Vr.mp4" class="embed-responsive-item" controls="controls" width="1
@@ -139,6 +159,11 @@
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center">
           <h1 class="pt-3 text-center"><b>Isolation Complex - 2017 (Unreal Engine 4, Blueprint)</b></h1>
           <p class="mb-0">Isolation complex is a short first person puzzle game demo developed in Unreal Engine 4 using Unreal Blueprint, it was created as part of my BSC Games Production as my dissertation project to collate data to see if players could play a game and solve puzzles under specific conditions I.E under a certain time, before I changed the idea topic. It features adventure and puzzle game elements where the player must solve a variety of logic puzzles to escape the room.<br></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center">Gameplay Video</h1>
         </div>
       </div>
       <div class="row">
@@ -161,6 +186,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
+          <h1 class="text-center">Gameplay Video</h1>
           <div class="embed-responsive embed-responsive-16by9 pt-3">
             <video src="assets/Portfolio/Connor/Once Upon a Castle - Gameplay.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -179,6 +205,7 @@
       </div>
       <div class="row">
         <div class="col-md-12 pb-3">
+          <h1 class="text-center">Gameplay Video</h1>
           <div class="embed-responsive embed-responsive-16by9 pt-3">
             <video src="assets/Portfolio/Connor/Dash and Stack.mp4" class="embed-responsive-item" controls="controls" width="1
 10"> Your browser does not support HTML5 video. </video>
@@ -193,6 +220,11 @@
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center" style="">
           <h1 class="py-3 text-center"><b>I Am Alone - 2015 (Ren'Py, Python)</b></h1>
           <p class="mb-0" style="">I Am Alone is a visual novel demo was developed in the Ren'Py engine as part as my level 3 extended diploma. Written in the python programming language. It has puzzle elements with a horror narrative feel where the player has to explore a mysterious underground facility solving various puzzles to find answers of who called them there.<br></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center">Gameplay Video</h1>
         </div>
       </div>
       <div class="row">
@@ -211,6 +243,11 @@
         <div class="p-md-5 d-flex flex-column justify-content-center col-lg-12 align-items-center" style="">
           <h1 class="pt-3 text-center"><b>Operation Health - 2012 (Game Maker, GML)</b></h1>
           <p class="mb-0" style="">Operation Health is a 2D platformer demo that was developed using Game Maker written in GML as part of my level 2 creative media course as we were tasked to great a game with the topic of healthy living. It was used as my final major project during my level 2 creative technologies course. It features action platformer elements with a comedic narrative. The player must progress through the level whilst shooting and defeating enemies until they reach the end of the game.<br></p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h1 class="text-center">Gameplay Video</h1>
         </div>
       </div>
       <div class="row">
