--- a/index.html
+++ b/index.html
@@ -123,6 +123,18 @@
           </div>
         </div>
       </div>
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="text-center">Development Update Video</h2>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 px-5">
+          <div class="embed-responsive embed-responsive-16by9">
+            <video src="assets/Portfolio/Shared/BOTR/Blight of the Rose - Dev Update 1.mp4" class="embed-responsive-item p-3" controls="controls" width="10"> Your browser does not support HTML5 video. </video>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
