--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <div class="row pb-0 pt-2" style="">
         <div class="col-md-12 col-lg-12">
           <h1 class="text-center py-3 bg-secondary">About Us</h1>
-          <p style="" class="my-2 bg-primary py-4 px-3">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
+          <p style="" class="my-2 bg-primary py-4 px-3 text-justify">Fine Chap Games is a newly established indie games development company comprising of two members. We've only released one game so far on the google play store but we plan on releasing several more inovative and enjoyable games in the near future. We mainly develop 2D games but we have plans to venture into 3D development eventually. Find our portfolios and CVs below if you are looking to hire.</p>
         </div>
       </div>
     </div>
@@ -54,14 +54,14 @@
           <h4 class="bg-secondary"> <b>Connor Orton BSC</b>
             <p class="lead py-1">Game Designer &amp; Programmer</p>
           </h4>
-          <p class="mb-0 bg-primary px-2 py-2" style="">Connor is a games designer and programmer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
+          <p class="mb-0 bg-primary px-2 py-2 text-justify" style="">Connor is a games designer and programmer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
         <div class="col-12 col-lg-6 py-2" style="">
           <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
             <p class="lead py-1">2D Artist</p>
           </h4>
-          <p class="mb-0 bg-primary px-2 py-2">Natalie is a 2D digital artist. She has always been passionate about art and never forgets the day she got her first art tablet and pen. Her responsibilities include conceptualizing various game ideas and creating assets based on them using industry standard software and art techniques. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2 btn-block" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
+          <p class="mb-0 bg-primary px-2 py-2 text-justify">Natalie is a 2D digital artist. She has always been passionate about art and never forgets the day she got her first art tablet and pen. Her responsibilities include conceptualizing various game ideas and creating assets based on them using industry standard software and art techniques. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2 btn-block" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
       <div class="row" style="">
         <div class="p-md-5 d-flex flex-column col-lg-8 justify-content-center" style="">
           <h1 class="bg-secondary text-center">Pixel Pinball Arcade</h1>
-          <p class="mb-0 bg-primary py-2 px-2" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android developed in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found below.<br><br>Credits:<br>- Connor Orton (Designer, Games Programmer)<br>- Natalie Smith (2D Digital Artist)</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a>
+          <p class="mb-0 bg-primary py-2 px-2 text-justify" style="">Pixel Pinball Arcade is a 2D pixel art pinball game for Android developed in Unity and written in C#. It was released in 2019 by Fine Chap Games and self published to the google play store. A link to the google play store page can be found below.<br><br>Credits:<br>- Connor Orton (Designer, Games Programmer)<br>- Natalie Smith (2D Digital Artist)</p><a class="btn btn-success my-3" href="https://play.google.com/store/apps/details?id=com.FineChapGames.PixelPinballArcade&amp;hl=en_GB"><i class="fa fa-fw fa-download"></i>Download Pixel Pinball Arcade</a>
         </div>
         <div class="col-lg-4" style="">
           <div class="carousel slide" data-ride="carousel" id="carousel_ppa">
@@ -113,7 +113,7 @@
       <div class="row" style="">
         <div class="col-lg-8 p-md-5 d-flex flex-column justify-content-center">
           <h2 class="bg-secondary text-center" style="">Project Blight (in development)</h2>
-          <p class="mb-0 bg-primary px-2 py-2">Our next project is a 2D Action Horror sidescroller with a pixel art style set in a populated city in the modern day during a apocalyptic style event. To be released multiplatform.</p>
+          <p class="mb-0 bg-primary px-2 py-2 text-justify" contenteditable="true">Our next project is a 2D Action Horror sidescroller with a pixel art style set in a populated city in the modern day during a apocalyptic style event. To be released multiplatform.</p>
         </div>
         <div class="col-lg-4 py-4">
           <div id="carousel2" class="carousel slide" data-ride="carousel" data-interval="5000">
