--- a/nataliesmith.html
+++ b/nataliesmith.html
@@ -26,7 +26,7 @@
       </div>
     </div>
   </nav>
-  <div class="mt-3" style="">
+  <div class="pb-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12"><img class="d-block img-fluid d-flex justify-content-center mx-auto my-3 border-dark border" src="assets/Portrait/Natalie_Smith.jpg" height="300" width="300
@@ -37,7 +37,7 @@
         <div class="px-md-5 flex-column d-flex justify-content-center" style="">
           <h1 class="text-center"><b>Natalie Smith</b></h1>
           <h3 class="text-center"><b>Digital &amp; Crafts Artist</b></h3>
-          <p class="lead text-center mx-3 mb-3">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
+          <p class="lead mx-3 mb-3 text-justify">Welcome to my portfolio page. I am a passionate, imaginative and&nbsp;conscientious digital artist and arts and crafts creator. I've always been a creative person my whole life and I want to be employed doing what I love by creating my art passions. I create digital art using the most popular industry standard software and hardware. I enjoy sketching on my graphics tablets often and creating a variety of different 2D artwork ranging from pixel art to seeing line art to completion. I also have knitting and sewing skills alongside non-digital artwork experience and I have plans to sell my creations online. Find my CV and portfolio below.<br></p>
           <div class="row px-2">
             <div class="col-md-4"><a class="btn text-white d-flex btn-lg align-items-start justify-content-center btn-block my-2" href="https://www.facebook.com/natsmith1219" style="background: rgb(59, 89, 152);" target="_blank"><i class="mb-3 lead"></i><i class="fa fa-facebook fa-fw fa-1x py-1"></i><i class="text"></i></a></div>
             <div class="col-md-4"><a class="btn text-white my-2 mx-auto btn-lg d-flex justify-content-center" href="https://www.linkedin.com/in/natsmith1219" style="background: rgb(9, 118, 180);" target="_blank"><i class="fa fa-linkedin fa-fw fa-1x py-1"></i></a></div>
@@ -52,21 +52,21 @@
       </div>
     </div>
   </div>
-  <div class="pt-3">
+  <div class="pt-3 pb-3">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100;	background-repeat: repeat;">
-      <div class="row">
+      <div class="row mx-auto">
         <div class="col-md-12">
-          <h1 class="d-flex justify-content-center display-3">Games Art Portfolio</h1>
+          <h1 class="d-flex justify-content-center align-items-center display-3 text-center">Games Art Portfolio</h1>
         </div>
       </div>
     </div>
   </div>
-  <div class="" style="">
+  <div class="pt-3" style="">
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
       <div class="row">
         <div class="col-md-12">
           <h1 class="text-center my-3" style="">Blight of the Rose (In Development) - 2021+ (Unity, C#)</h1>
-          <p class="d-flex flex-grow-1 px-4">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors. My responsibility is to develop all of the various 2D sprites to import into the project such as control scheme icon, in-game maps, item icon sprites and more.&nbsp;All sprites are work in progress whilst the game is in development. All sprites were made in Aseprite and exported as a png.<br><br>Below is a video of the game in its current state. It is in early development and most art isn't final until release.</p>
+          <p class="d-flex flex-grow-1 px-4 text-justify">Blight of the Rose is an upcoming multi-platform 2D survival horror game developed in Unity and written in C#. It is being developed in a team of two. The game is set during an apocolpyse style event where a city is overrun by zombie-like beings. One of the main themes of the game is connectivity and the reliance on technology and this theme is featured heavily in the storyline as the player relies on their mobile phone and a modified respirator to survive and locate other survivors. My responsibility is to develop all of the various 2D sprites to import into the project such as control scheme icon, in-game maps, item icon sprites and more.&nbsp;All sprites are work in progress whilst the game is in development. All sprites were made in Aseprite and exported as a png.<br><br>Below is a video of the game in its current state. It is in early development and most art isn't final until release.</p>
         </div>
       </div>
     </div>
@@ -77,16 +77,14 @@
         </div>
       </div>
       <div class="row pb-3">
-        <div class="col-6 p-3 col-md-3"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Component_Items_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-3"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Drink_Consumables_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-3"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Food_Consumables_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-3"> <img class="img-fluid d-block mx-auto w-50" src="assets/Portfolio/Natalie/BOTR Sprites/Key_Item_Items_spritesheet.png"> </div>
-      </div>
-      <div class="row pb-3">
-        <div class="col-6 p-3 col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Medical_Consumables_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-6" style="">
-          <div class="row"><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Ammo_Items_spritesheet.png"><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Gadget_Items_spritesheet.png"></div>
-        </div>
+        <div class="p-3 col-8 mx-auto col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Component_Items_spritesheet.png"> </div>
+        <div class="p-3 col-8 mx-auto col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Drink_Consumables_spritesheet.png"> </div>
+        <div class="p-3 col-8 mx-auto col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Food_Consumables_spritesheet.png"> </div>
+        <div class="p-3 col-8 mx-auto col-md-6"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Key_Item_Items_spritesheet.png" width="125
+100"> </div>
+        <div class="p-3 col-8 mx-auto col-md-6"><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Medical_Consumables_spritesheet.png"></div>
+        <div class="p-3 col-8 mx-auto col-md-6"><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Ammo_Items_spritesheet.png"></div>
+        <div class="p-3 col-8 mx-auto col-md-6"><img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Gadget_Items_spritesheet.png"></div>
       </div>
     </div>
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
@@ -96,7 +94,17 @@
         </div>
       </div>
       <div class="row pb-3">
-        <div class="col-6 p-3 col-md-12 mx-auto"> <img class="img-fluid d-block mx-auto w-50" src="assets/Portfolio/Natalie/BOTR Sprites/Crafting_Station_spritesheet.png"> </div>
+        <div class="p-3 mx-auto col-12 col-md-12"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Crafting_Station_spritesheet.png" width="300
+350
+
+500
+500
+10
+200
+0" height="500
+200
+
+0"> </div>
       </div>
     </div>
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
@@ -106,7 +114,7 @@
         </div>
       </div>
       <div class="row pb-3">
-        <div class="col-6 p-3 col-md-12 mx-auto"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Placeholder_StickMan_spritesheet.png"> </div>
+        <div class="p-3 col-md-12 mx-auto col-12"> <img class="img-fluid d-block mx-auto" src="assets/Portfolio/Natalie/BOTR Sprites/Placeholder_StickMan_spritesheet.png" width="300"> </div>
       </div>
     </div>
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
@@ -116,10 +124,10 @@
         </div>
       </div>
       <div class="row pb-3">
-        <div class="col-6 p-3 col-md-3"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Windows_Hotkeys_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-3"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Xbox_Hotkeys_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-3"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Dualshock_Hotkeys_spritesheet.png"> </div>
-        <div class="col-6 p-3 col-md-3"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Switch_Hotkeys_spritesheet.png"> </div>
+        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Windows_Hotkeys_spritesheet.png"> </div>
+        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Xbox_Hotkeys_spritesheet.png"> </div>
+        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Dualshock_Hotkeys_spritesheet.png"> </div>
+        <div class="p-3 col-md-3 col-8 mx-auto"> <img class="img-fluid d-block" src="assets/Portfolio/Natalie/BOTR Sprites/Switch_Hotkeys_spritesheet.png"> </div>
       </div>
     </div>
     <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
@@ -159,7 +167,7 @@
       </div>
     </div>
   </div>
-  <div class="">
+  <div class="pb-3">
     <div class="container">
       <div class="row">
       </div>
@@ -169,7 +177,7 @@
         <div class="row">
           <div class="col-md-12">
             <h1 class="text-center my-3" style="">Pixel Pinball Arcade - 2020 (Unity C#)</h1>
-            <p class="px-4 mx-5">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
+            <p class="d-flex flex-grow-1 px-4">Pixel Pinball Arcade is an android arcade game developed in Unity written in C# and released for free on the google play store. Inspired by the popular arcade machine pinball. The game was developed in a team of two which included myself and a 2D artist. This was my second project working in a team of two. My main responsibility was to create the various 2D art assets such as the backgrounds, user interface sprites, game board sprites and so on.</p>
           </div>
         </div>
       </div>
@@ -226,6 +234,23 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous" style=""></script>
+  </div>
+  <div class="text-center mb-3" style="">
+    <div class="container" style="	background-image: linear-gradient(to bottom, rgba(245, 245, 245, 0.95), rgba(245, 245, 245, 0.95));	background-position: top left;	background-size: 100%;	background-repeat: repeat;">
+      <div class="row">
+        <div class="mx-auto col-lg-7">
+          <h1 class="text-center my-3" style="">Contact Form</h1>
+          <form action="https://formspree.io/f/meqvvqlz" method="POST">
+            <div class="form-row">
+              <div class="form-group col-md-6"> <input type="text" class="form-control" id="form27" placeholder="Name" required="required" name="Name"> </div>
+              <div class="form-group col-md-6"> <input type="email" class="form-control" id="form28" placeholder="Email" required="required" name="Email"> </div>
+            </div>
+            <div class="form-group"> <input type="text" class="form-control" id="form29" placeholder="Subject" required="required" name="Subject"> </div>
+            <div class="form-group"> <textarea class="form-control" id="form30" rows="3" placeholder="Your message" name="Your message"></textarea> </div> <button type="submit" class="btn btn-primary">Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
   </div>
 </body>
 
