--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 400
 350" alt="Card image cap" src="assets/Portrait/Connor_Orton.jpg">
           <h4 class="bg-secondary"> <b>Connor Orton BSC</b>
-            <p class="lead py-1">Game Designer &amp; Programmer</p>
+            <p class="lead py-1">Games Programmer &amp; Designer</p>
           </h4>
-          <p class="mb-0 bg-primary px-2 py-2 text-justify" style="">Connor is a games designer and programmer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
+          <p class="mb-0 bg-primary px-2 py-2 text-justify" style="">Connor is a games programmer and designer. He has been passionate about games production since an early age who started out using RPG Maker 2000 to create 2D RPG games. His responsibilities include designing and writing game systems in a variety of different programming languages. He also oversees the project pipeline and asset implementation in the game engine.&nbsp;<br></p><a class="btn btn-primary my-2 btn-block" href="connororton.html" style="">Portfolio &amp; CV</a>
         </div>
         <div class="col-12 col-lg-6 py-2" style="">
           <img class="img-fluid d-block mb-3 mx-auto border border-dark" alt="Card image cap" src="assets/Portrait/Natalie_Smith.jpg" width="350">
           <h4 class="bg-secondary"> <b>Natalie Smith</b>
-            <p class="lead py-1">2D Artist</p>
+            <p class="lead py-1">2D Digital Artist</p>
           </h4>
           <p class="mb-0 bg-primary px-2 py-2 text-justify">Natalie is a 2D digital artist. She has always been passionate about art and never forgets the day she got her first art tablet and pen. Her responsibilities include conceptualizing various game ideas and creating assets based on them using industry standard software and art techniques. She has experience using the latest art programs&nbsp;such as Photoshop, Aseprite, Paint Tool SAI and more.</p><a class="btn btn-primary my-2 btn-block" style="" href="nataliesmith.html">Portfolio &amp; CV</a>
         </div>
